force-app/main/default/objects/SM_OKTA_Presta_Site__mdt/SM_OKTA_Presta_Site__mdt.object-meta.xml
<CustomObject>
    <description>@Project : Smile
Permet d&apos;alimenter différents champs sur l&apos;utilisateur lors de sa création via Okta</description>
    <label>SM OKTA Presta Site</label>
    <pluralLabel>SM OKTA Presta Site</pluralLabel>
</CustomObject>