force-app/main/default/objects/SM_OKTA_Presta_Site__mdt/fields/OKTA_Department__c.field-meta.xml
<CustomField>
    <fullName>OKTA_Department__c</fullName>
    <label>OKTA Department</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Del CRC La Baule</fullName>
            </value>
            <value>
                <fullName>DGP_CNF_Accenture_Ebene</fullName>
            </value>
            <value>
                <fullName>DGP_PART_Armatis_Caen</fullName>
            </value>
            <value>
                <fullName>DGP_PART_Armatis_Guimaraes</fullName>
            </value>
            <value>
                <fullName>DGP_PART_Armatis_Porto</fullName>
            </value>
            <value>
                <fullName>DGP_PART_ARMATIS_Tunis</fullName>
            </value>
            <value>
                <fullName>DGP_PART_Arvato_Casa</fullName>
            </value>
            <value>
                <fullName>DGP_PART_Arvato_Chaumont</fullName>
            </value>
            <value>
                <fullName>DGP_PART_Arvato_Coudekerque</fullName>
                <default>true</default>
                <label>DGP_PART_Arvato_Coudekerque</label>
            </value>
            <value>
                <fullName>DGP_PART_ARVATO_DAKAR</fullName>
            </value>
            <value>
                <fullName>DGP_PART_ARVATO_MARRAKECH</fullName>
            </value>
            <value>
                <fullName>DGP_PART_COMDATA_Casablanca</fullName>
            </value>
            <value>
                <fullName>DGP_PART_COMDATA_MarcqEnBaroeul</fullName>
            </value>
            <value>
                <fullName>DGP_PART_COMDATA_Soissons</fullName>
            </value>
            <value>
                <fullName>DGP_PART_DEAFI_Montreuil</fullName>
            </value>
            <value>
                <fullName>DGP_PART_EuroCRM_MOKA</fullName>
            </value>
            <value>
                <fullName>DGP_PART_Majorel_MARRAKECH</fullName>
            </value>
            <value>
                <fullName>DGP_PART_MXT_Arvato_Chaumont</fullName>
            </value>
            <value>
                <fullName>DGP_PART_Sitel-Group_Dakar</fullName>
            </value>
            <value>
                <fullName>DGP_PART_Sitel-Group_Fes</fullName>
            </value>
            <value>
                <fullName>DGP_PART_Sitel-Group_LaRochelle</fullName>
            </value>
            <value>
                <fullName>DGP_PART_Sitel-Group_Nancy</fullName>
            </value>
            <value>
                <fullName>DGP_PART_TELEPERFORMANCE_LYON</fullName>
            </value>
            <value>
                <fullName>DGP_PART_TELEPERFORMANCE_TUNIS</fullName>
            </value>
            <value>
                <fullName>DGP_REC_Contentia_Ebene</fullName>
            </value>
            <value>
                <fullName>DGP_REC_Contentia_Nantes</fullName>
            </value>
            <value>
                <fullName>DGP_REC_Contentia_Wasquehal</fullName>
            </value>
            <value>
                <fullName>DGP_REC_Effico_Tours</fullName>
            </value>
            <value>
                <fullName>DGP_REC_Gayssot_Lyon</fullName>
            </value>
            <value>
                <fullName>DGP_REC_Geri_Lyon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>