force-app/main/default/objects/SM_OKTA_Presta_Site__mdt/fields/SMILE_Equipe__c.field-meta.xml
<CustomField>
    <fullName>SMILE_Equipe__c</fullName>
    <label>SMILE Equipe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipe Dunkerque Arvato DGP</fullName>
                <default>true</default>
                <label>Equipe Dunkerque Arvato DGP</label>
            </value>
            <value>
                <fullName>Equipe Casablanca COMDATA DGP</fullName>
            </value>
            <value>
                <fullName>Equipe FES Sitel Group DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Guimaraes Armatis DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Caen Armatis DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Nancy Sitel Group DGP</fullName>
            </value>
            <value>
                <fullName>Equipe La Rochelle Sitel Group DGP</fullName>
            </value>
            <value>
                <fullName>Equipe MarcqEnBaroeul COMDATA DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Soissons COMDATA DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Porto Armatis DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Marrakech Arvato DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Casablanca Arvato DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Lyon Téléperformance DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Tunis Téléperformance DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Chaumont Arvato DGP</fullName>
            </value>
            <value>
                <fullName>Equipe 1 Premium Metz DGP</fullName>
            </value>
            <value>
                <fullName>Equipe 1 Premium Quimper DGP</fullName>
            </value>
            <value>
                <fullName>Equipe 1 EM/DM Dunkerque DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Tunis Armatis DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Dakar Arvato DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Montreuil DEAFI DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Dakar Sitel Group DGP</fullName>
            </value>
            <value>
                <fullName>Equipe CNF Accenture Ebene DGP</fullName>
            </value>
            <value>
                <fullName>Equipe Moka Euro CRM DGP</fullName>
            </value>
            <value>
                <fullName>Equipe 1 reco clt résiliés Contentia DGP</fullName>
            </value>
            <value>
                <fullName>Equipe 2 reco clt résiliés Contentia DGP</fullName>
            </value>
            <value>
                <fullName>Equipe 3 reco clt résiliés Contentia DGP</fullName>
            </value>
            <value>
                <fullName>Equipe 1 recouv clt résiliés Effico DGP</fullName>
            </value>
            <value>
                <fullName>Equipe 1 recouv clt actifs Gayssot DGP</fullName>
            </value>
            <value>
                <fullName>Equipe 1 recouv clt actifs GERI DGP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>