force-app/main/default/objects/SM_OKTA_Presta_Site__mdt/fields/SMILE_Prestataire__c.field-meta.xml
<CustomField>
    <fullName>SMILE_Prestataire__c</fullName>
    <label>SMILE Prestataire</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DSPC_Externe_Dakar_Fes_DGP</fullName>
                <label>DSPC Externe Dakar DGP</label>
            </value>
            <value>
                <fullName>DSPC_Externe_Fes_DGP</fullName>
                <label>DSPC Externe Fes DGP</label>
            </value>
            <value>
                <fullName>Dunkerque DGP</fullName>
            </value>
            <value>
                <fullName>ENGIE</fullName>
            </value>
            <value>
                <fullName>INT_Dunkerque</fullName>
            </value>
            <value>
                <fullName>INT_LBA</fullName>
            </value>
            <value>
                <fullName>INT_Metz</fullName>
            </value>
            <value>
                <fullName>INT_Quimper</fullName>
            </value>
            <value>
                <fullName>LA BAULE DGP</fullName>
            </value>
            <value>
                <fullName>Metz DGP</fullName>
            </value>
            <value>
                <fullName>Prestataire ACCENTURE DGP</fullName>
            </value>
            <value>
                <fullName>Prestataire Armatis DGP</fullName>
            </value>
            <value>
                <fullName>Prestataire Arvato DGP</fullName>
            </value>
            <value>
                <fullName>Prestataire COMDATA DGP</fullName>
            </value>
            <value>
                <fullName>Prestataire COMDATA DGP</fullName>
                <isActive>false</isActive>
                <label>Prestataire COMDATA DGP</label>
            </value>
            <value>
                <fullName>Prestataire Contentia DGP</fullName>
            </value>
            <value>
                <fullName>Prestataire DEAFI DGP</fullName>
            </value>
            <value>
                <fullName>Prestataire Effico DGP</fullName>
            </value>
            <value>
                <fullName>Prestataire Euro CRM DGP</fullName>
            </value>
            <value>
                <fullName>Prestataire Gayssot DGP</fullName>
            </value>
            <value>
                <fullName>Prestataire GERI DGP</fullName>
            </value>
            <value>
                <fullName>Prestataire Sitel Group DGP</fullName>
                <default>true</default>
                <label>Prestataire Sitel Group DGP</label>
            </value>
            <value>
                <fullName>Prestataire Téléperformance DGP</fullName>
            </value>
            <value>
                <fullName>Quimper DGP</fullName>
            </value>
            <value>
                <fullName>Televente_Externe_COMDATA_DGP</fullName>
                <label>Télévente Externe COMDATA DGP</label>
            </value>
            <value>
                <fullName>Televente_Externe_Convers_DGP</fullName>
                <label>Télévente Externe Convers DGP</label>
            </value>
            <value>
                <fullName>Televente_Externe_Euro_CRM_DGP</fullName>
                <label>Télévente Externe Euro CRM DGP</label>
            </value>
            <value>
                <fullName>Televente_Externe_Intelcia_DGP</fullName>
                <label>Télévente Externe Intelcia DGP</label>
            </value>
            <value>
                <fullName>Televente_Externe_Myopla_DGP</fullName>
                <label>Télévente Externe Myopla DGP</label>
            </value>
            <value>
                <fullName>Televente_Externe_Sitel_Group_DGP</fullName>
                <label>Télévente Externe Sitel Group DGP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>