force-app/main/default/objects/SM_OKTA_Presta_Site__mdt/fields/SMILE_Site__c.field-meta.xml
<CustomField>
    <fullName>SMILE_Site__c</fullName>
    <label>SMILE Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACCENTURE EBENE CNF DGP</fullName>
            </value>
            <value>
                <fullName>Armatis Caen DGP</fullName>
            </value>
            <value>
                <fullName>Armatis Guimaraes DGP</fullName>
            </value>
            <value>
                <fullName>Armatis Porto DGP</fullName>
            </value>
            <value>
                <fullName>Armatis Tunis DGP</fullName>
            </value>
            <value>
                <fullName>Arvato Casablanca DGP</fullName>
            </value>
            <value>
                <fullName>Arvato Chaumont DGP</fullName>
            </value>
            <value>
                <fullName>Arvato Dakar DGP</fullName>
            </value>
            <value>
                <fullName>Arvato Dunkerque DGP</fullName>
                <default>true</default>
                <label>Arvato Dunkerque DGP</label>
            </value>
            <value>
                <fullName>Arvato Marrakech DGP</fullName>
            </value>
            <value>
                <fullName>COMDATA Casablanca DGP</fullName>
            </value>
            <value>
                <fullName>COMDATA MarcqEnBaroeul</fullName>
            </value>
            <value>
                <fullName>COMDATA Soissons</fullName>
            </value>
            <value>
                <fullName>Contentia Ebene reco clt  DGP</fullName>
            </value>
            <value>
                <fullName>Contentia Marcq en baroeul reco clt  DGP</fullName>
            </value>
            <value>
                <fullName>Contentia Nantes reco clt  DGP</fullName>
            </value>
            <value>
                <fullName>DEAFI Montreuil</fullName>
            </value>
            <value>
                <fullName>DUNKERQUE</fullName>
            </value>
            <value>
                <fullName>Effico Tours recouv clt DGP</fullName>
            </value>
            <value>
                <fullName>EM/DM Dunkerque DGP</fullName>
            </value>
            <value>
                <fullName>Equipe 1 Dakar DSPC DGP</fullName>
            </value>
            <value>
                <fullName>DSPC_Externe_Dakar_Fes_DGP</fullName>
                <label>Equipe 1 Fes  Dakar DSPC DGP</label>
            </value>
            <value>
                <fullName>Equipe_1_Televente_COMDATA_Casablanca</fullName>
                <label>Equipe 1 Télévente COMDATA Casablanca</label>
            </value>
            <value>
                <fullName>Equipe_1_Televente_Convers_DGP</fullName>
                <label>Equipe 1 Télévente Convers DGP</label>
            </value>
            <value>
                <fullName>Equipe_1_Televente_Euro_CRM_Lisieux_DGP</fullName>
                <label>Equipe 1 Télévente Euro CRM Lisieux DGP</label>
            </value>
            <value>
                <fullName>Equipe_1_Televente_Euro_CRM_Mo_DGP</fullName>
                <label>Equipe 1 Télévente Euro CRM Mo DGP</label>
            </value>
            <value>
                <fullName>Equipe_1_Televente_Intelcia_Casablanca</fullName>
                <label>Equipe 1 Télévente Intelcia Casablanca</label>
            </value>
            <value>
                <fullName>Equipe_1_Televente_Myopla_Tetouan_DGP</fullName>
                <label>Equipe 1 Télévente Myopla Tetouan DGP</label>
            </value>
            <value>
                <fullName>Equipe_1_Televente_Sitel_Group_Fes_DGP</fullName>
                <label>Equipe 1 Télévente Sitel Group Fes DGP</label>
            </value>
            <value>
                <fullName>Equipe_1_Televente_VIPP_Cameroun_DGP</fullName>
                <label>Equipe 1 Télévente VIPP Cameroun DGP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>