force-app/main/default/objects/SM_OKTA_Presta_Site__mdt/fields/SMILE_Trigramme_Prestataire__c.field-meta.xml
<CustomField>
    <fullName>SMILE_Trigramme_Prestataire__c</fullName>
    <label>SMILE Trigramme Prestataire</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIT</fullName>
                <default>true</default>
                <label>SIT</label>
            </value>
            <value>
                <fullName>COM</fullName>
            </value>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>INT</fullName>
            </value>
            <value>
                <fullName>TEL</fullName>
            </value>
            <value>
                <fullName>MAJ</fullName>
            </value>
            <value>
                <fullName>ENG</fullName>
            </value>
            <value>
                <fullName>DEA</fullName>
            </value>
            <value>
                <fullName>ACC</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>CON</fullName>
            </value>
            <value>
                <fullName>EFF</fullName>
            </value>
            <value>
                <fullName>GAY</fullName>
            </value>
            <value>
                <fullName>GER</fullName>
            </value>
            <value>
                <fullName>MYO</fullName>
            </value>
            <value>
                <fullName>ITL</fullName>
            </value>
            <value>
                <fullName>COV</fullName>
            </value>
            <value>
                <fullName>WH</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>