force-app/main/default/objects/SM_OKTA_Presta_Site__mdt/fields/SMILE_Trigramme_Site__c.field-meta.xml
<CustomField>
    <fullName>SMILE_Trigramme_Site__c</fullName>
    <label>SMILE Trigramme Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALG</fullName>
            </value>
            <value>
                <fullName>ALT</fullName>
            </value>
            <value>
                <fullName>CAE</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>CDK</fullName>
                <default>true</default>
                <label>CDK</label>
            </value>
            <value>
                <fullName>CHA</fullName>
            </value>
            <value>
                <fullName>CON</fullName>
            </value>
            <value>
                <fullName>DAK</fullName>
            </value>
            <value>
                <fullName>DUN</fullName>
            </value>
            <value>
                <fullName>EBE</fullName>
            </value>
            <value>
                <fullName>FES</fullName>
            </value>
            <value>
                <fullName>GUI</fullName>
            </value>
            <value>
                <fullName>LAR</fullName>
            </value>
            <value>
                <fullName>LBA</fullName>
            </value>
            <value>
                <fullName>LIS</fullName>
            </value>
            <value>
                <fullName>LYO</fullName>
            </value>
            <value>
                <fullName>MEB</fullName>
            </value>
            <value>
                <fullName>MOK</fullName>
            </value>
            <value>
                <fullName>MON</fullName>
            </value>
            <value>
                <fullName>MTZ</fullName>
            </value>
            <value>
                <fullName>NAN</fullName>
            </value>
            <value>
                <fullName>NTE</fullName>
            </value>
            <value>
                <fullName>POI</fullName>
            </value>
            <value>
                <fullName>POR</fullName>
            </value>
            <value>
                <fullName>QUP</fullName>
            </value>
            <value>
                <fullName>ROC</fullName>
            </value>
            <value>
                <fullName>SOI</fullName>
            </value>
            <value>
                <fullName>TOU</fullName>
            </value>
            <value>
                <fullName>TUN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>