force-app/main/default/objects/SM_OKTA_Presta_Site__mdt/fields/TelephoneSite__c.field-meta.xml
<CustomField>
    <fullName>TelephoneSite__c</fullName>
    <label>TelephoneSite</label>
    <type>Phone</type>
</CustomField>